deployment/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: modusynth
  name: api-service
  labels:
    app: modusynth-api
spec:
  selector:
    app: modusynth-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 80
