deployment/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: <NAMESPACE>
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app: synple-api
spec:
  tls:
    - secretName: synple-certificates
  rules:
    - http:
        paths:
          - path: "<PREFIX>/api(/|$)(.*)"
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
